Add basic game structure to HTML and logo

--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
     <!--Google Fonts-->
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Codystar:wght@300&family=Poiret+One&family=Raleway+Dots&family=Righteous&display=swap">
-        </head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Finger+Paint&family=Poiret+One&family=Raleway+Dots&display=swap"
+        rel="stylesheet">
+</head>
 
 <body>
     <header>
