Game container and memory card in place

--- a/index.html
+++ b/index.html
@@ -22,9 +22,20 @@
     </header>
     <section class="game-area">
         game area
-        <div id="memory-area">
-            memory area
+        <!--Memory game container-->
+        <div class="memory-container">
+            <div class="memory-card">box image 1 </div>
+            <div class="memory-card">box image 2 </div>
+            <div class="memory-card">box image 3 </div>
+            <div class="memory-card">box image 4 </div>
         </div>
+        <div class="memory-container">
+            <div class="memory-card">box image 1 </div>
+            <div class="memory-card">box image 2 </div>
+            <div class="memory-card">box image 3 </div>
+            <div class="memory-card">box image 4 </div>
+        </div>
+
         <div id="count-area">
             timing + moves count
         </div>
