Add scoring section to game area

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Finger+Paint&family=Poiret+One&family=Raleway+Dots&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Codystar&family=Finger+Paint&family=Nosifer&family=Poiret+One&family=Raleway+Dots&family=Rock+Salt&display=swap"
         rel="stylesheet">
+
 </head>
 
 <body>
@@ -21,7 +22,7 @@
         <h1 id="logo">COLOR SPLASH MEMORY</h1>
     </header>
     <section class="game-area">
-        game area
+        <h2>Let's get started!</h2>
         <!--Memory game container-->
         <div class="memory-container">
             <div class="memory-card">box image 1 </div>
@@ -35,10 +36,14 @@
             <div class="memory-card">box image 3 </div>
             <div class="memory-card">box image 4 </div>
         </div>
-
-        <div id="count-area">
-            timing + moves count
+    
+        <div id="count-area-timing">
+            <p>Timing</p>
         </div>
+        <div id="count-area-moves">
+            <p>Moves</p>
+        </div>
+<br>
         <div id="result-area">
             results area
         </div>
