Add instructions to game

--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
         <h1 id="logo">COLOR SPLASH MEMORY</h1>
     </header>
     <section class="game-area">
-        <h2>Let's get started!</h2>
+        <h2>Let's get started!
+            <p>Below four colours are hiding behind the cards. <br>Click on a card to display its color, can you find the
+                matching one? <br>Once you found two colours of the same, it's a match. <br> 
+            Challenge yourself and find the pairs on as short time as possible, and as few moves as possible. <br>Good luck!</p>
+        </h2>
         <!--Memory game container-->
         <div class="memory-container">
             <div class="memory-card">box image 1 </div>
@@ -36,14 +40,14 @@
             <div class="memory-card">box image 3 </div>
             <div class="memory-card">box image 4 </div>
         </div>
-    
+
         <div id="count-area-timing">
-            <p>Timing</p>
+            <h3>Timing</h3>
         </div>
         <div id="count-area-moves">
-            <p>Moves</p>
+            <h3>Moves</h3>
         </div>
-<br>
+        <br>
         <div id="result-area">
             results area
         </div>
