--- a/index.html
+++ b/index.html
@@ -24,28 +24,28 @@
     <section class="game-area">
         <h2>Let's get started!
             <p>Below four colours are hiding behind the cards. <br>Click on a card to display its color, can you find the
-                matching one? <br>Once you found two colours of the same, it's a match. <br> 
+                matching one? <br>Once you found two colours of the same, it's a match and the cards stays in place. <br> 
             Challenge yourself and find the pairs on as short time as possible, and as few moves as possible. <br>Good luck!</p>
         </h2>
         <!--Memory game container-->
         <div class="memory-container">
-            <div class="memory-card">box image 1 </div>
-            <div class="memory-card">box image 2 </div>
-            <div class="memory-card">box image 3 </div>
-            <div class="memory-card">box image 4 </div>
+            <div class="memory-card"></div>
+            <div class="memory-card"></div>
+            <div class="memory-card"></div>
+            <div class="memory-card"></div>
         </div>
-        <div class="memory-container">
-            <div class="memory-card">box image 1 </div>
-            <div class="memory-card">box image 2 </div>
-            <div class="memory-card">box image 3 </div>
-            <div class="memory-card">box image 4 </div>
+            <div class="memory-container">
+            <div class="memory-card"></div>
+            <div class="memory-card"></div>
+            <div class="memory-card"></div>
+            <div class="memory-card"></div>
         </div>
 
-        <div id="count-area-timing">
-            <h3>Timing</h3>
+        <div class="counts">
+            <h3 class="count-area-left">Timing: <span id="count-area-timing">0</span></h3>
         </div>
-        <div id="count-area-moves">
-            <h3>Moves</h3>
+        <div class="counts">
+            <h3 class="count-area-right">Moves: <span id="count-area-moves">0</span></h3>
         </div>
         <br>
         <div id="result-area">
@@ -55,7 +55,7 @@
 
     </section>
     <footer>
-        social media
+        footer
     </footer>
     <script src="assets/js/script.js"></script>
 </body>
