Sett the memory cards images and styling

--- a/index.html
+++ b/index.html
@@ -23,22 +23,41 @@
     </header>
     <section class="game-area">
         <h2>Let's get started!
-            <p>Below four colours are hiding behind the cards. <br>Click on a card to display its color, can you find the
-                matching one? <br>Once you found two colours of the same, it's a match and the cards stays in place. <br> 
-            Challenge yourself and find the pairs on as short time as possible, and as few moves as possible. <br>Good luck!</p>
+            <p>Below four colours are hiding behind the cards. <br>Click on a card to display its color, can you find
+                the
+                matching one? <br>Once you found two colours of the same, it's a match and the cards stays in place.
+                <br>
+                Challenge yourself and find the pairs on as short time as possible, and as few moves as possible.
+                <br>Good luck!</p>
+                <br>
         </h2>
         <!--Memory game container-->
         <div class="memory-container">
-            <div class="memory-card"></div>
-            <div class="memory-card"></div>
-            <div class="memory-card"></div>
-            <div class="memory-card"></div>
-        </div>
-            <div class="memory-container">
-            <div class="memory-card"></div>
-            <div class="memory-card"></div>
-            <div class="memory-card"></div>
-            <div class="memory-card"></div>
+            <div class="memory-card">
+                <img class="front-face" src="assets/images/blue.jpg" alt="Blue Card">
+            </div>
+            <div class="memory-card">
+                <img class="front-face" src="assets/images/green.jpg" alt="Green Card">
+            </div>
+            <div class="memory-card">
+                <img class="front-face" src="assets/images/orange.jpg" alt="Orange Card">
+            </div>
+            <div class="memory-card">
+                <img class="front-face" src="assets/images/purple.jpg" alt="Purple Card">
+            </div>
+            <div class="memory-card">
+                <img class="front-face" src="assets/images/blue.jpg" alt="Blue Card">
+            </div>
+            <div class="memory-card">
+                <img class="front-face" src="assets/images/green.jpg" alt="Green Card">
+            </div>
+            <div class="memory-card">
+                <img class="front-face" src="assets/images/orange.jpg" alt="Orange Card">
+            </div>
+            <div class="memory-card">
+                <img class="front-face" src="assets/images/purple.jpg" alt="Purple Card">
+            </div>
+         
         </div>
 
         <div class="counts">
