resized images within card and set board structure to fit

--- a/index.html
+++ b/index.html
@@ -29,36 +29,86 @@
                 <br>
                 Challenge yourself and find the pairs on as short time as possible, and as few moves as possible.
                 <br>Good luck!</p>
-                <br>
+            <br>
         </h2>
         <!--Memory game container-->
         <div class="memory-container">
-            <div class="memory-card">
-                <img class="front-face" src="assets/images/blue.jpg" alt="Blue Card">
+            <div class="flip-card memory-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                    </div>
+                    <div class="flip-card-back">
+                        <img src="assets/images/blue.jpg" alt="Blue Card">
+                    </div>
+                </div>
             </div>
-            <div class="memory-card">
-                <img class="front-face" src="assets/images/green.jpg" alt="Green Card">
+            <div class="flip-card memory-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                    </div>
+                    <div class="flip-card-back">
+                        <img src="assets/images/blue.jpg" alt="Blue Card">
+                    </div>
+                </div>
             </div>
-            <div class="memory-card">
-                <img class="front-face" src="assets/images/orange.jpg" alt="Orange Card">
+            <div class="flip-card memory-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                    </div>
+                    <div class="flip-card-back">
+                        <img src="assets/images/green.jpg" alt="Green Card">
+                    </div>
+                </div>
             </div>
-            <div class="memory-card">
-                <img class="front-face" src="assets/images/purple.jpg" alt="Purple Card">
+            <div class="flip-card memory-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                    </div>
+                    <div class="flip-card-back">
+                        <img src="assets/images/green.jpg" alt="Green Card">
+                    </div>
+                </div>
             </div>
-            <div class="memory-card">
-                <img class="front-face" src="assets/images/blue.jpg" alt="Blue Card">
+            <div class="flip-card memory-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                    </div>
+                    <div class="flip-card-back">
+                        <img src="assets/images/orange.jpg" alt="Orange Card">
+                    </div>
+                </div>
             </div>
-            <div class="memory-card">
-                <img class="front-face" src="assets/images/green.jpg" alt="Green Card">
+            <div class="flip-card memory-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                    </div>
+                    <div class="flip-card-back">
+                        <img src="assets/images/orange.jpg" alt="Orange Card">
+                    </div>
+                </div>
             </div>
-            <div class="memory-card">
-                <img class="front-face" src="assets/images/orange.jpg" alt="Orange Card">
+            <div class="flip-card memory-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                    </div>
+                    <div class="flip-card-back">
+                        <img src="assets/images/purple.jpg" alt="Purple Card">
+                    </div>
+                </div>
             </div>
-            <div class="memory-card">
-                <img class="front-face" src="assets/images/purple.jpg" alt="Purple Card">
+            <div class="flip-card memory-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                    </div>
+                    <div class="flip-card-back">
+                        <img src="assets/images/purple.jpg" alt="Purple Card">
+                    </div>
+                </div>
             </div>
-         
         </div>
+        </section>
+
+
 
         <div class="counts">
             <h3 class="count-area-left">Timing: <span id="count-area-timing">0</span></h3>
