Set up functions for game and debugged errors

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
                     </div>
-                    <div class="flip-card-back">
+                    <div class="flip-card-back" data-image="blue">
                         <img src="assets/images/blue.jpg" alt="Blue Card">
                     </div>
                 </div>
@@ -46,7 +46,7 @@
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
                     </div>
-                    <div class="flip-card-back">
+                    <div class="flip-card-back" data-image="blue">
                         <img src="assets/images/blue.jpg" alt="Blue Card">
                     </div>
                 </div>
@@ -55,7 +55,7 @@
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
                     </div>
-                    <div class="flip-card-back">
+                    <div class="flip-card-back" data-image="green">
                         <img src="assets/images/green.jpg" alt="Green Card">
                     </div>
                 </div>
@@ -64,7 +64,7 @@
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
                     </div>
-                    <div class="flip-card-back">
+                    <div class="flip-card-back" data-image="green">
                         <img src="assets/images/green.jpg" alt="Green Card">
                     </div>
                 </div>
@@ -73,7 +73,7 @@
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
                     </div>
-                    <div class="flip-card-back">
+                    <div class="flip-card-back" data-image="orange">
                         <img src="assets/images/orange.jpg" alt="Orange Card">
                     </div>
                 </div>
@@ -82,7 +82,7 @@
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
                     </div>
-                    <div class="flip-card-back">
+                    <div class="flip-card-back" data-image="orange">
                         <img src="assets/images/orange.jpg" alt="Orange Card">
                     </div>
                 </div>
@@ -91,7 +91,7 @@
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
                     </div>
-                    <div class="flip-card-back">
+                    <div class="flip-card-back" data-image="purple">
                         <img src="assets/images/purple.jpg" alt="Purple Card">
                     </div>
                 </div>
@@ -100,7 +100,7 @@
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
                     </div>
-                    <div class="flip-card-back">
+                    <div class="flip-card-back" data-image="purple">
                         <img src="assets/images/purple.jpg" alt="Purple Card">
                     </div>
                 </div>
