Run Java, CSS and HTML i validator and update

--- a/index.html
+++ b/index.html
@@ -22,15 +22,14 @@
         <h1 id="logo">COLOR SPLASH MEMORY</h1>
     </header>
     <section class="game-area">
-        <h2>Let's get started!
-            <p>Below four colours are hiding behind the cards. <br>Click on a card to display its color, can you find
-                the
-                matching one? <br>Once you found two colours of the same, it's a match and the cards stays in place.
-                <br>
-                Challenge yourself and find the pairs on as short time as possible, and as few moves as possible.
-                <br>Good luck!</p>
+        <h2>Let's get started!</h2>
+        <p>Below four colours are hiding behind the cards. <br>Click on a card to display its color, can you find
+            the
+            matching one? <br>Once you found two colours of the same, it's a match and the cards stays in place.
             <br>
-        </h2>
+            Challenge yourself and find the pairs on as short time as possible, and as few moves as possible.
+            <br>Good luck!</p>
+        <br>
         <!--Memory game container-->
         <div class="memory-container">
             <div class="flip-card memory-card">
@@ -106,10 +105,10 @@
                 </div>
             </div>
         </div>
-        </section>
+    </section>
 
-
-
+    <!--Results Area-->
+    <section class="results-area">
         <div class="counts">
             <h3 class="count-area-left">Timing: <span id="count-area-timing">0</span></h3>
         </div>
@@ -120,11 +119,8 @@
         <div id="result-area">
             results area
         </div>
-
-
     </section>
-    <footer>
-        footer
+    <footer></footer>
     </footer>
     <script src="assets/js/script.js"></script>
 </body>
