function unflipping cards work

--- a/index.html
+++ b/index.html
@@ -108,16 +108,8 @@
     </section>
 
     <!--Results Area-->
-    <section class="results-area">
-        <div class="counts">
-            <h3 class="count-area-left">Timing: <span id="count-area-timing">0</span></h3>
-        </div>
-        <div class="counts">
-            <h3 class="count-area-right">Moves: <span id="count-area-moves">0</span></h3>
-        </div>
-        <br>
-        <div id="result-area">
-            results area
+    <section class="result-area">
+            <h3 class="count-area">Moves: <span id="count-area-moves">0</span></h3>
         </div>
     </section>
     <footer></footer>
