Add Media queries to be fully responsive

--- a/index.html
+++ b/index.html
@@ -32,77 +32,79 @@
         <br>
         <!--Memory game container-->
         <div class="memory-container">
-            <div class="flip-card memory-card" data-image="blue">
-                <div class="flip-card-inner">
-                    <div class="flip-card-front">
-                    </div>
-                    <div class="flip-card-back">
-                        <img src="assets/images/blue.jpg" alt="Blue Card">
-                    </div>
-                </div>
-            </div>
-            <div class="flip-card memory-card" data-image="blue">
-                <div class="flip-card-inner">
-                    <div class="flip-card-front">
-                    </div>
-                    <div class="flip-card-back">
-                        <img src="assets/images/blue.jpg" alt="Blue Card">
+            <div class="container-1">
+                <div class="flip-card memory-card" data-image="blue">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                        </div>
+                        <div class="flip-card-back">
+                            <img src="assets/images/blue.jpg" alt="Blue Card">
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="flip-card memory-card" data-image="green">
-                <div class="flip-card-inner">
-                    <div class="flip-card-front">
-                    </div>
-                    <div class="flip-card-back">
-                        <img src="assets/images/green.jpg" alt="Green Card">
-                    </div>
-                </div>
-            </div>
-            <div class="flip-card memory-card" data-image="green">
-                <div class="flip-card-inner">
-                    <div class="flip-card-front">
-                    </div>
-                    <div class="flip-card-back">
-                        <img src="assets/images/green.jpg" alt="Green Card">
+                <div class="flip-card memory-card" data-image="blue">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                        </div>
+                        <div class="flip-card-back">
+                            <img src="assets/images/blue.jpg" alt="Blue Card">
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="flip-card memory-card" data-image="orange">
-                <div class="flip-card-inner">
-                    <div class="flip-card-front">
-                    </div>
-                    <div class="flip-card-back">
-                        <img src="assets/images/orange.jpg" alt="Orange Card">
-                    </div>
-                </div>
-            </div>
-            <div class="flip-card memory-card" data-image="orange">
-                <div class="flip-card-inner">
-                    <div class="flip-card-front">
-                    </div>
-                    <div class="flip-card-back">
-                        <img src="assets/images/orange.jpg" alt="Orange Card">
+                <div class="flip-card memory-card" data-image="green">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                        </div>
+                        <div class="flip-card-back">
+                            <img src="assets/images/green.jpg" alt="Green Card">
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="flip-card memory-card" data-image="purple">
-                <div class="flip-card-inner">
-                    <div class="flip-card-front">
-                    </div>
-                    <div class="flip-card-back">
-                        <img src="assets/images/purple.jpg" alt="Purple Card">
-                    </div>
-                </div>
-            </div>
-            <div class="flip-card memory-card" data-image="purple">
-                <div class="flip-card-inner">
-                    <div class="flip-card-front">
-                    </div>
-                    <div class="flip-card-back">
-                        <img src="assets/images/purple.jpg" alt="Purple Card">
+                <div class="flip-card memory-card" data-image="green">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                        </div>
+                        <div class="flip-card-back">
+                            <img src="assets/images/green.jpg" alt="Green Card">
+                        </div>
                     </div>
                 </div>
+                    <div class="flip-card memory-card" data-image="orange">
+                        <div class="flip-card-inner">
+                            <div class="flip-card-front">
+                            </div>
+                            <div class="flip-card-back">
+                                <img src="assets/images/orange.jpg" alt="Orange Card">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flip-card memory-card" data-image="orange">
+                        <div class="flip-card-inner">
+                            <div class="flip-card-front">
+                            </div>
+                            <div class="flip-card-back">
+                                <img src="assets/images/orange.jpg" alt="Orange Card">
+                            </div>
+                        </div>
+                    </div>
+                    <!-- <div class="flip-card memory-card" data-image="purple">
+                        <div class="flip-card-inner">
+                            <div class="flip-card-front">
+                            </div>
+                            <div class="flip-card-back">
+                                <img src="assets/images/purple.jpg" alt="Purple Card">
+                            </div>
+                        </div>
+                    </div> -->
+                   <!-- <div class="flip-card memory-card" data-image="purple">
+                        <div class="flip-card-inner">
+                            <div class="flip-card-front">
+                            </div>
+                            <div class="flip-card-back">
+                                <img src="assets/images/purple.jpg" alt="Purple Card">
+                            </div>
+                        </div> -->
+                    </div>
             </div>
         </div>
     </section>
