--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Color Splash Memory</title>
     <link rel="stylesheet" href="assets/css/style.css">
-
+    <!--Font Awsome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -69,25 +70,25 @@
                         </div>
                     </div>
                 </div>
-                    <div class="flip-card memory-card" data-image="orange">
-                        <div class="flip-card-inner">
-                            <div class="flip-card-front">
-                            </div>
-                            <div class="flip-card-back">
-                                <img src="assets/images/orange.jpg" alt="Orange Card">
-                            </div>
+                <div class="flip-card memory-card" data-image="orange">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                        </div>
+                        <div class="flip-card-back">
+                            <img src="assets/images/orange.jpg" alt="Orange Card">
                         </div>
                     </div>
-                    <div class="flip-card memory-card" data-image="orange">
-                        <div class="flip-card-inner">
-                            <div class="flip-card-front">
-                            </div>
-                            <div class="flip-card-back">
-                                <img src="assets/images/orange.jpg" alt="Orange Card">
-                            </div>
+                </div>
+                <div class="flip-card memory-card" data-image="orange">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                        </div>
+                        <div class="flip-card-back">
+                            <img src="assets/images/orange.jpg" alt="Orange Card">
                         </div>
                     </div>
-                    <!-- <div class="flip-card memory-card" data-image="purple">
+                </div>
+                <!-- <div class="flip-card memory-card" data-image="purple">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
                             </div>
@@ -96,7 +97,7 @@
                             </div>
                         </div>
                     </div> -->
-                   <!-- <div class="flip-card memory-card" data-image="purple">
+                <!-- <div class="flip-card memory-card" data-image="purple">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
                             </div>
@@ -104,18 +105,24 @@
                                 <img src="assets/images/purple.jpg" alt="Purple Card">
                             </div>
                         </div> -->
-                    </div>
             </div>
         </div>
+        </div>
+        
     </section>
-
     <!--Results Area-->
     <section class="result-area">
         <h3 class="count-area">Moves: <span id="count-area-moves">0</span></h3>
+        <div class="center">
+            <button class="reset-button">Restart Game</button>
+        </div>
     </section>
     <script src="assets/js/script.js"></script>
-    <footer></footer>
-    
+    <footer>    
+        <a href="#" class="fa fa-facebook"></a>
+        <a href="#" class="fa fa-instagram"></a>
+    </footer>
+
 </body>
 
 </html>
