Add function that resets the board by reloading the page

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <section class="result-area">
         <h3 class="count-area">Moves: <span id="count-area-moves">0</span></h3>
         <div class="center">
-            <button class="reset-button">Restart Game</button>
+            <button id="reset-button">Restart Game</button>
         </div>
     </section>
     <script src="assets/js/script.js"></script>
