--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
     </section>
     <script src="assets/js/script.js"></script>
     <footer>    
-        <a href="#" class="fa fa-facebook"></a>
-        <a href="#" class="fa fa-instagram"></a>
+        <a href="#" class="fa fa-facebook" aria-label="Facebook"></a>
+        <a href="#" class="fa fa-instagram"aria-label="Instagram"></a>
     </footer>
 
 </body>
