--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
     <section class="game-area">
         <h2>Let's get started!</h2>
-        <p>Below four colours are hiding behind the cards. <br>Click on a card to display its color, can you find
+        <p>Below three colours are hiding behind the cards. <br>Click on a card to display its color, can you find
             the
             matching one? <br>Once you found two colours of the same, it's a match and the cards stays in place.
             <br>
