--- a/index.html
+++ b/index.html
@@ -88,39 +88,22 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div class="flip-card memory-card" data-image="purple">
-                        <div class="flip-card-inner">
-                            <div class="flip-card-front">
-                            </div>
-                            <div class="flip-card-back">
-                                <img src="assets/images/purple.jpg" alt="Purple Card">
-                            </div>
-                        </div>
-                    </div> -->
-                <!-- <div class="flip-card memory-card" data-image="purple">
-                        <div class="flip-card-inner">
-                            <div class="flip-card-front">
-                            </div>
-                            <div class="flip-card-back">
-                                <img src="assets/images/purple.jpg" alt="Purple Card">
-                            </div>
-                        </div> -->
             </div>
         </div>
         </div>
-        
+
     </section>
     <!--Results Area-->
-    <section class="result-area">
+    <section class="result-area center">
         <h3 class="count-area">Moves: <span id="count-area-moves">0</span></h3>
         <div class="center">
             <button id="reset-button">Restart Game</button>
         </div>
     </section>
     <script src="assets/js/script.js"></script>
-    <footer>    
+    <footer>
         <a href="#" class="fa fa-facebook" aria-label="Facebook"></a>
-        <a href="#" class="fa fa-instagram"aria-label="Instagram"></a>
+        <a href="#" class="fa fa-instagram" aria-label="Instagram"></a>
     </footer>
 
 </body>
