--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             the
             matching one? <br>Once you found two colours of the same, it's a match and the cards stays in place.
             <br>
-            Challenge yourself and find the pairs on as short time as possible, and as few moves as possible.
+            Challenge yourself and find the pairs on as few moves as possible.
             <br>Good luck!</p>
         <br>
         <!--Memory game container-->
