--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@
             <button id="reset-button">Restart Game</button>
         </div>
     </section>
-    <script src="assets/js/script.js"></script>
+    <!--Footer-->
     <footer>
         <a href="#" class="fa fa-facebook" aria-label="Facebook"></a>
         <a href="#" class="fa fa-instagram" aria-label="Instagram"></a>
     </footer>
-
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
